# pdf-comparison-worker

./: Dockerfile  README.md  pyproject.toml
tests/: test_processor.py
worker/: app.py  app2.py  clients.py  config.py  model.py  notifications.py  processor.py  server.py  types.py
