[tool.poetry]
name = "pdf-comparison-worker"
version = "0.1.0"
description = ""
authors = ["Jeremy Herzog <jeremyaherzog@gmail.com>"]
readme = "README.md"
packages = [{include = "worker"}]

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "^5.4.0"}
fastapi = {extras = ["standard"], version = "^0.115.0"}
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
